--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-build/
-heirloom-project/
-heirloom-project.orig/
-install-root/
-pkgbuild/*-*
-spool/S5LX*
-src/*.gz
-src/*-*
-images/rootfs.ext4
-images/ISO-ROOT/
-images/*.iso
-kernel/bzImage
-qemu-disks/*
-packages/*.pkg
+/build/
+/heirloom-project/
+/heirloom-project.orig/
+/install-root/
+/pkgbuild/*-*
+/spool/S5LX*
+/src/*.gz
+/src/*-*
+/images/rootfs.ext4
+/images/ISO-ROOT/
+/images/*.iso
+/kernel/bzImage
+/qemu-disks/*
+/packages/*.pkg
+/src/build
