--- a/kernel.config
+++ b/kernel.config
@@ -2891,7 +2891,7 @@ CONFIG_DRM_I915_STOP_TIMEOUT=100
 CONFIG_DRM_I915_TIMESLICE_DURATION=1
 # CONFIG_DRM_VGEM is not set
 # CONFIG_DRM_VKMS is not set
-# CONFIG_DRM_VMWGFX is not set
+CONFIG_DRM_VMWGFX=y 
 # CONFIG_DRM_GMA500 is not set
 # CONFIG_DRM_UDL is not set
 # CONFIG_DRM_AST is not set
