Much more work on getting CDE packaged relabily.

--- a/configs/etc/X11/xorg.conf
+++ b/configs/etc/X11/xorg.conf
@@ -1,8 +1,12 @@
 Section "ServerFlags"
-        #Option "AllowMouseOpenFail"  "true"  # allows the server to start up even if the mouse does not work
-        Option "DontVTSwitch"        "false" # allow switching between virtual terminal
-        Option "DontZap"             "false" # allow killing server with Ctrl+Alt+Backspace
-        # Option "DontZoom"            "true"  # disable <Crtl><Alt><KP_+>/<KP_-> (resolution switching)
+    Option "DontVTSwitch"        "false" # allow switching between virtual terminal
+    Option "DontZap" "false"
+EndSection
+
+Section "InputClass"
+    Identifier      "Keyboard Defaults"
+    MatchIsKeyboard "yes"
+    Option          "XkbOptions" "terminate:ctrl_alt_bksp"
 EndSection
 
 Section "Files"
