--- a/configs/etc/X11/xorg.conf
+++ b/configs/etc/X11/xorg.conf
@@ -9,6 +9,13 @@ Section "InputClass"
     Option          "XkbOptions" "terminate:ctrl_alt_bksp"
 EndSection
 
+Section "InputDevice"
+  Identifier  "keyboard-vmware"
+  Driver      "evdev"
+  Option      "Device" "/dev/input/by-path/platform-i8042-serio-0-event-kbd"
+  Option      "XkbOptions" "terminate:ctrl_alt_bksp"
+EndSection
+
 Section "Files"
 #        RgbPath      "/usr/X11R6/lib/X11/rgb"
 #        ModulePath   "/usr/X11R6/lib/modules"
