--- a/kernel.config
+++ b/kernel.config
@@ -4465,7 +4465,7 @@ CONFIG_FONT_8x16=y
 # CONFIG_FONT_6x10 is not set
 # CONFIG_FONT_10x18 is not set
 CONFIG_FONT_SUN8x16=y
-# CONFIG_FONT_SUN12x22 is not set
+CONFIG_FONT_SUN12x22=y
 # CONFIG_FONT_TER16x32 is not set
 # CONFIG_FONT_6x8 is not set
 CONFIG_SG_POOL=y
